# wordscape-score-scraper

./: .gitignore  LICENSE  README.md  config.MacBook-Pro.json  config.json  fix_player_start_date.sql  host_config.json  player_metrics.db  requirements.txt  update_settings.py  wordscape-score-scraper.code-workspace
.github/: FUNDING.yml
.templates/: %REPO-NAME%.code-workspace  emojis.py  launch.json  process_source.json  settings.json  setup.cfg  tasks.json  template.app_keys.json
SQLite-Scripts/: Active_Players.sql  Delete_Player_by_ID.sql  Insert_Missing_Team_Score_Results.sql  Insert_Player.sql  Max_Weekend_Team_Score.sql  Missing_Team_Score_Results.sql  Team_Tournament_Results.sql  Weekend_Player_Stats.sql  Weekend_Scores_by_Date.sql  Weekend_Stats.sql
__docs__/: Stopwatch-Usage.md
__project_packages__/: pyproject.toml  setup.cfg
__workspace_packages__/: __init__.py  cls_db_tools.py  cls_env_config.py  cls_env_tools.py  cls_img_tools.py  cls_logging_manager.py  cls_project_tools.py  cls_string_helpers.py  pyproject.toml  setup.cfg
analytics/: low_activity_players.py
csv_files/: past_scores.py  players_seed.py
docs/: all-metrics.html  all_player_metrics.json  alltime_highlights.json  extract_todos.py  extract_update_todos.py  index.html  last_weekend_report.json  player-metrics-dashboard.html  player_metrics_dashboard.json  recent-tournaments-dashboard.html  recent-tournaments.html  recent_tournament_metrics.json  recent_tournaments_dashboard.json  to-do.md  wordscapes_ocr_lessons.md
process_screenshots/: export_screenshots.py  import_scores.py  (+2 more)
(+92 files in other folders)
