[metadata]
name = workspace-packages
version = 0.1
description = A shared utility package for the workspace
author = Ted Bouskill
author_email = agraybeardsview@gmail.com
license = MIT
keywords = utilities, helpers, shared

[options]
packages = find:
python_requires = >=3.6
install_requires =
    # Add any dependencies that your shared package needs

[options.package_data]
* = *.txt, *.rst

[options.extras_require]
#dev =
#    black
#    flake8
#    pytest

[options.entry_points]
# Optional: Define any command-line scripts here
#console_scripts =
#    my_tool = shared.utils:main_function
